# libfobos

./: CMakeLists.txt  README.md  libfobos.pc.in
src/: fobos.c
utils/fobos_devinfo/: CMakeLists.txt
utils/fobos_recorder/: CMakeLists.txt
utils/fobos_recorder/src/: main.c
